--- a/Entrega Clase 20/src/public/css/styles.css
+++ b/Entrega Clase 20/src/public/css/styles.css
@@ -133,6 +133,31 @@
     transition: 0.6s;
   }
   
+  .welcome__message {
+    margin: auto;
+    text-align: center;
+    padding: 2rem;
+  }
+  
+  .welcome__navbar {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+  }
+  
+  .welcome__navbar--li {
+    border: 1px solid #000;
+    border-radius: 5px;
+    padding: 0.5rem;
+  }
+  
+  .welcome__navbar--li:hover {
+    background-color: bisque;
+    border: 1px solid purple;
+  }
+  
   /* .chat__container {
       margin: 3rem;
       padding: 1rem;
@@ -277,4 +302,112 @@
     background-color: #333;
     color: #fff;
     transition: 0.6s;
+  }
+  
+  /* LOGIN */
+  
+  .layout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .login__container {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .login__title {
+    font-size: 5em;
+  }
+  
+  .login__form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  
+  .login__input {
+    height: 30px;
+    padding: 0.3rem;
+    border-radius: 5px;
+  }
+  
+  .login__input::placeholder {
+    text-transform: uppercase;
+  }
+  
+  .login__btn {
+    height: 30px;
+    padding: 0 0.5rem;
+    border-radius: 5px;
+    background-color: #f49390;
+  }
+  
+  .login__btn:hover {
+    cursor: pointer;
+    background-color: #333;
+    color: #fff;
+    transition: 0.6s;
+  }
+  
+  /* REGISTER */
+  
+  .register__container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .register__title {
+    font-size: 3em;
+    margin-bottom: 1rem;
+  }
+  
+  .register__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .register__input {
+    height: 30px;
+    padding: 0.3rem;
+    border-radius: 5px;
+  }
+  
+  .register__input::placeholder {
+    text-transform: uppercase;
+  }
+  
+  .register__inputBtn {
+    height: 30px;
+    padding: 0 0.5rem;
+    border-radius: 5px;
+    background-color: #f49390;
+    min-width: 150px;
+  }
+  
+  .register__inputBtn:hover {
+    cursor: pointer;
+    background-color: #333;
+    color: #fff;
+    transition: 0.6s;
+  }
+  
+  .register__box--column {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .register__box--row {
+    display: flex;
+    gap: 1rem;
   }
