--- a/Entrega Clase 20/src/views/layouts/main.handlebars
+++ b/Entrega Clase 20/src/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>La Tiendita</title>
+    <title>La Tiendita SHOP</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
@@ -13,10 +13,8 @@
           <h1><a href="/">La Tiendita</a></h1>
         </div>
         <ul>
-          <li><a href="/api/products/">API Products</a></li>
-          <li><a href="/api/carts">API Carts</a></li>
-          <li><a href="/products">Products</a></li>
-          <li><a href="/carts/63c5494987fcf899bff4f698">Cart</a></li>
+          <li><a href="/home/products">Products</a></li>
+          <li><a href="/home/carts/63c5494987fcf899bff4f698">Cart</a></li>
         </ul>
       </nav>
     </header>
