--- a/Entrega Clase 20/src/views/productDetail.handlebars
+++ b/Entrega Clase 20/src/views/productDetail.handlebars
@@ -4,9 +4,13 @@
       <h3>{{product.title}}</h3>
       <p>{{product.description}}</p>
       <h3>${{product.price}}</h3>
-      <button class="product__detail__button" id="addProduct__btn" value={{product._id}} >Agregar al carrito</button>
+      <button
+        class="product__detail__button"
+        id="addProduct__btn"
+        value={{product._id}}
+      >Agregar al carrito</button>
     </div>
-    <div  class="product__detail__image">
+    <div class="product__detail__image">
       <img src={{product.thumbnail}} alt="product__image" />
     </div>
   </div>
