--- a/Entrega Clase 35/src/views/login.handlebars
+++ b/Entrega Clase 35/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <main class="layout">
   <div class="login__container">
     <h2 class="login__title">Bienvenido</h2>
-    <p>Ingresá tus datos para continuar o <a href="/register">REGISTRATE</a></p>
+    <p>Ingresá tus datos para continuar o <a href="/register">REGISTRATE!</a></p>
     <form action="/login" method="post" class="login__form">
       <input
         type="text"
