--- a/Entrega Clase 35/src/views/register.handlebars
+++ b/Entrega Clase 35/src/views/register.handlebars
@@ -1,6 +1,6 @@
 <main class="layout">
   <div class="register__container">
-    <h2 class="register__title">Por favor completá todos los campos para
+    <h2 class="register__title">Por favor, completá todos los campos para
       registrarte</h2>
     <form action="/register" method="POST" class="register__form">
       <div class="register__box--row">
